# backend-excercise

./: .pdm.toml  ReadMe.md  pyproject.toml  setup.cfg
Store/Checkout/: product.py
docs/Class Diagram/Visual paradigm files/: backend-exercise.vpp  backend-exercise.vpp.bak_000f  backend-exercise.vpp.bak_001d  backend-exercise.vpp.bak_002d  backend-exercise.vpp.bak_003d  backend-exercise.vpp.bak_004d  backend-exercise.vpp.bak_005d  backend-exercise.vpp.bak_006d  backend-exercise.vpp.bak_007d  backend-exercise.vpp.bak_008d  backend-exercise.vpp.bak_009d  backend-exercise.vpp.bak_010d  backend-exercise.vpp.bak_011d  backend-exercise.vpp.bak_012d
src/: main.py
src/store/: main.py  run_script.py
src/store/checkout/: calculator.py  checkout.py  discount.py  discount_calculator.py  pricing_rule.py  product.py
tests/: test_backend_exercise.py
tests/Checkout/: test_product.py
tests/store/checkout/: test_calculator.py  test_checkout.py  test_discount.py  test_discount_calculator.py  test_product.py  test_suite.py  test_tshirt_rule.py  test_voucher_rule.py
