[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Christian Gallo", email = "christian.gallo@nextail.co"},
]
dependencies = [
    "fastapi>=0.85.1",
    "uvicorn>=0.19.0",
    "pytest>=7.2.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm.build]
package-dir = "src"
includes = ["src/store"]


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
